--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ header{
 }
 
 h1 {
-    font-size: 45px;
+    font-size: 70px;
 }
 form {
     display: flex;
@@ -26,15 +26,22 @@ form {
 }
 
 button {
-    margin-left: 20px;
+    margin-left: 10px;
+    font-size: 30px;
+    padding: auto;
+    
 }
 
 input{
-    font-size: 25px;
+    font-size: 40px;
 }
 
 ul li{
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    font-size: 30px;
+}
+
+.activate{
+    text-decoration: line-through;
 }
